Fix text alignment for teaser cards headings

--- a/components/card/card.scss
+++ b/components/card/card.scss
@@ -39,6 +39,7 @@
   /*----------  Teaser  ----------*/
   &--teaser {
     --cu-composite-heading-align: left;
+    --cu-composite-heading-text-align: left;
     --cu-composite-heading-accent-display: none;
 
     .cu-card__meta {
